@@ -10,20 +10,5 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>framework</artifactId>
-
-    <build>
-        <plugins>
-            <plugin>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>11</source>
-                    <target>11</target>
-                    <compilerArgs>
-                        <arg>--add-exports=java.base/jdk.internal.access=ALL-UNNAMED</arg>
-                    </compilerArgs>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
-
+    
 </project>
